Поправила код согласно комментариям